--- a/MoTMe/MoTMe.csproj
+++ b/MoTMe/MoTMe.csproj
@@ -178,6 +178,7 @@
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Models\Message.cs" />
     <Compile Include="Models\MoTMeContext.cs" />
+    <Compile Include="Models\MoTMeRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
