--- a/MoTMe.Tests/MoTMe.Tests.csproj
+++ b/MoTMe.Tests/MoTMe.Tests.csproj
@@ -98,6 +98,7 @@
   <ItemGroup>
     <Compile Include="Models\MessageTests.cs" />
     <Compile Include="Models\MoTMeRepositoryTests.cs" />
+    <Compile Include="Models\UserTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Controllers\HomeControllerTest.cs" />
   </ItemGroup>
