--- a/MoTMe/MoTMe.csproj
+++ b/MoTMe/MoTMe.csproj
@@ -179,6 +179,7 @@
     <Compile Include="Models\Message.cs" />
     <Compile Include="Models\MoTMeContext.cs" />
     <Compile Include="Models\MoTMeRepository.cs" />
+    <Compile Include="Models\User.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
