--- a/MoTMe.Tests/MoTMe.Tests.csproj
+++ b/MoTMe.Tests/MoTMe.Tests.csproj
@@ -96,6 +96,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Controllers\UserControllerTests.cs" />
     <Compile Include="Models\MessageTests.cs" />
     <Compile Include="Models\MoTMeRepositoryTests.cs" />
     <Compile Include="Models\UserTests.cs" />
