--- a/MoTMe/packages.config
+++ b/MoTMe/packages.config
@@ -33,5 +33,7 @@
   <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net46" />
   <package id="Owin" version="1.0" targetFramework="net46" />
   <package id="Respond" version="1.2.0" targetFramework="net46" />
+  <package id="RestSharp" version="105.2.2" targetFramework="net46" />
+  <package id="Twilio" version="4.4.1" targetFramework="net46" />
   <package id="WebGrease" version="1.5.2" targetFramework="net46" />
 </packages>
